--- a/src/styles/scroll.css
+++ b/src/styles/scroll.css
@@ -1,23 +1,23 @@
 .scroll::-webkit-scrollbar {
-    width: 10px;
+    width: 15px;
   }
   
   /* Track */
-  .scroll::-webkit-scrollbar-track {
-    background: #d61818; 
+ /*  .scroll::-webkit-scrollbar-track {
+    background: rgba(180, 180, 229, 0.464); 
     
-  }
+  } */
    
   /* Handle */
   .scroll::-webkit-scrollbar-thumb {
-    background-color:rgb(35, 119, 236);
-    border-radius: 10px;
+    background-color:rgb(181, 185, 241);
+    border-radius: 15px;
   
   }
   
   /* Handle on hover */
   .scroll::-webkit-scrollbar-thumb:hover {
-    background: rgb(185, 13, 207);
+    background: rgb(232, 194, 237);
   }
 
   .scroll{
