--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,8 +1,8 @@
 html {    
-    height: 100vh;
-    width: 100vw;
-    background-image: linear-gradient(to bottom left, rgb(236, 241, 246), rgba(218, 195, 244, 0.69), rgba(233, 203, 244, 0.703));
-    overflow: hidden;
+    height: 100vh!important;
+    width: 100vw!important;
+    background-image: linear-gradient(to bottom left, rgb(236, 241, 246), rgba(218, 195, 244, 0.69), rgba(233, 203, 244, 0.703))!important;
+    overflow: hidden!important;
     /* radiant gradiant */
 }
 
@@ -11,6 +11,18 @@ body {
     width: 100vw;
     overflow: hidden;
 }
+
+.jumbotron1 {
+    background: url(https://nuestraflora.com/wp-content/uploads/2019/07/flor-de-aleli-17.jpg) no-repeat center center;
+    background-size: cover;
+    padding-top: 2px;
+    padding-bottom: 2%;
+    text-align: center;
+    height: 100px!important;
+    font-family:'Montserrat', sans-serif!important;
+    color:white;
+  }
+
 
 .home {  
     height: 500px;
@@ -93,6 +105,11 @@ body {
 .barra0 {
     width: 100%;
     height: 100px;
+}
+
+.barra1 {
+    width: 30%;
+    height: 30px;
 }
 
 .menu {
