--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -24,10 +24,38 @@ body {
     color:white;
   }
 
+.myButton {
+	box-shadow:inset 0px 1px 0px -1px #bdafd1;
+	background:linear-gradient(to bottom, #c6a1f5 5%, #a490f5 100%);
+	background-color:#c6a1f5;
+	border-radius:23px;
+	border:4px solid #c2b4f0;
+	display:inline-block;
+	cursor:pointer;
+	color:#ad7aff;
+	font-family:Arial;
+	font-size:22px;
+	font-weight:bold;
+	padding:19px 24px;
+	text-decoration:none;
+	text-shadow:-3px -1px 3px #aa9cf7;
+}
+
+.myButton:hover {
+	background:linear-gradient(to bottom, #a490f5 5%, #c6a1f5 100%);
+	background-color:#a490f5;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}
+
 .text{
     text-shadow: rgb(129, 179, 245);
     padding: top;
 }
+
+
 
 .home {  
     height: 500px;
@@ -113,9 +141,9 @@ body {
 }
 
 .menu {
-    width: 50px;
+    width: 150px;
     height: 100vh;
-    background-color: rgb(131, 109, 195);
+    background-color: rgb(227, 221, 248);
 }
 
 .encabezado {
@@ -164,7 +192,7 @@ body {
 }
 
 .card1 {
-  background-image: url("assets/images/game.png");  
+  background-image: url("../images/game.png");  
   background-position: center;
   background-size: 300px 400px;
   height: 400px;
@@ -172,19 +200,19 @@ body {
 }
 
 .card2 {
-    background-image: url("assets/images/PassswordG.png");  
+    background-image: url("../images/PassswordG.png");  
     background-position: center;
     background-size:300px 400px;
 }
 
 .card3 {
-    background-image: url("assets/images/WeatherDash.png");  
+    background-image: url("../images/WeatherDash.png");  
     background-position: center;
     background-size:300px 400px; 
 }
 
 .card4 {
-    background-image: url("assets/images/scheduler.png");  
+    background-image: url("../images/scheduler.png");  
     background-position: center;
     background-size:300px 400px; 
     height: 400px;
@@ -192,19 +220,29 @@ body {
 }
 
 .card5 {
-    background-image: url("assets/images/eatDaBurger.gif");  
+    background-image: url("../images/eatDaBurger.gif");  
     background-position: center;
     background-size:300px 400px; 
 }
 
 .card6 {
-    background-image: url("assets/images/fitness02.png");  
+    background-image: url("../images/fitness02.png");  
     background-position: center;
     background-size:300px 400px; 
 }
 
-.card3 {
-    background-image: url("assets/images/Employee_tracker.gif");  
+.card7 {
+    background-image: url("../images/NoteTaker.gif");  
+    background-position: center;
+    background-size:300px 400px; 
+}
+.card8 {
+    background-image: url("../images/Employee-Directory.gif");  
+    background-position: center;
+    background-size:300px 400px; 
+}
+.card9 {
+    background-image: url("../images/deantAPPointment_2.gif");  
     background-position: center;
     background-size:300px 400px; 
 }
